Qualificação - Introdução atualizada e enviada para revisão

--- a/Qualis/references.bib
+++ b/Qualis/references.bib
@@ -599,7 +599,15 @@ doi={10.1109/ACCESS.2018.2890507}
   publisher={Elsevier}
 }
 
-
+@article{guo2021blockchain-bibliometric,
+  title={A bibliometric analysis and visualization of blockchain},
+  author={Guo, Yi-Ming and Huang, Zhen-Ling and Guo, Ji and Guo, Xing-Rong and Li, Hua and Liu, Meng-Yu and Ezzeddine, Safa and Nkeli, Mpeoane Judith},
+  journal={Future Generation Computer Systems},
+  volume={116},
+  pages={316--332},
+  year={2021},
+  publisher={Elsevier}
+}
 
 
 
@@ -649,4 +657,72 @@ doi={10.1109/ACCESS.2018.2890507}
   pages={36--63},
   year={2001},
   publisher={Springer}
+}
+
+@article{fu2019critical,
+  title={A critical-path-coverage-based vulnerability detection method for smart contracts},
+  author={Fu, Menglin and Wu, Lifa and Hong, Zheng and Zhu, Feng and Sun, He and Feng, Wenbo},
+  journal={IEEE Access},
+  volume={7},
+  pages={147327--147344},
+  year={2019},
+  publisher={IEEE}
+}
+
+@article{fan2020performance,
+  title={Performance Evaluation of Blockchain Systems: A Systematic Survey},
+  author={Fan, Caixiang and Ghaemi, Sara and Khazaei, Hamzeh and Musilek, Petr},
+  journal={IEEE Access},
+  volume={8},
+  pages={126927--126950},
+  year={2020},
+  publisher={IEEE}
+}
+
+@article{zhu2019iot-applications,
+  title={Applications of distributed ledger technologies to the internet of things: A survey},
+  author={Zhu, Qingyi and Loke, Seng W and Trujillo-Rasua, Rolando and Jiang, Frank and Xiang, Yong},
+  journal={ACM computing surveys (CSUR)},
+  volume={52},
+  number={6},
+  pages={1--34},
+  year={2019},
+  publisher={ACM New York, NY, USA}
+}
+
+@article{almakhour2020verification,
+  title={Verification of smart contracts: A survey},
+  author={Almakhour, Mouhamad and Sliman, Layth and Samhat, Abed Ellatif and Mellouk, Abdelhamid},
+  journal={Pervasive and Mobile Computing},
+  pages={101227},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{kim2020automated-test-sc,
+  title={Automated Generation of Test Cases for Smart Contract Security Analyzers},
+  author={Kim, Ki Byung and Lee, Jonghyup},
+  journal={IEEE Access},
+  volume={8},
+  pages={209377--209392},
+  year={2020},
+  publisher={IEEE}
+}
+
+@article{vacca2020systematic,
+  title={A systematic literature review of blockchain and smart contract development: Techniques, tools, and open challenges},
+  author={Vacca, Anna and Di Sorbo, Andrea and Visaggio, Corrado A and Canfora, Gerardo},
+  journal={Journal of Systems and Software},
+  pages={110891},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@inproceedings{dika2018security,
+  title={Security vulnerabilities in ethereum smart contracts},
+  author={Dika, Ardit and Nowostawski, Mariusz},
+  booktitle={2018 IEEE International Conference on Internet of Things (iThings) and IEEE Green Computing and Communications (GreenCom) and IEEE Cyber, Physical and Social Computing (CPSCom) and IEEE Smart Data (SmartData)},
+  pages={955--962},
+  year={2018},
+  organization={IEEE}
 }
