--- a/Qualis/thesis.tex
+++ b/Qualis/thesis.tex
@@ -69,7 +69,7 @@
 % ELEMENTOS PRÉ-TEXTUAIS
 % ----------------------------------------------------------
 
-\input{tex/pre-textual}
+%\input{tex/pre-textual}
 
 % ----
 % Início do documento
@@ -88,6 +88,18 @@
 \label{cap:fundamentacao}
 \input{tex/fundamentacao}
 
+\chapter{Revisão bibliográfica}
+\label{cap:revisao}
+
+\chapter{Trabalhos relacionados}
+\label{cap:trab_relacionados}
+
+\chapter{Método}
+\label{cap:metodo}
+
+\chapter{Considerações finais}
+\label{cap:cons_finais}
+
 %\chapter{Revisão bibliográfica}
 %\label{cap:revisao}
 %\input{tex/revisao}
@@ -102,7 +114,7 @@
 % ----------------------------------------------------------
 % ELEMENTOS PÓS-TEXTUAIS
 % ----------------------------------------------------------
-\postextual
+%\postextual
 
 % ----------------------------------------------------------
 % Referências bibliográficas
