--- a/Qualis/thesis.tex
+++ b/Qualis/thesis.tex
@@ -34,7 +34,7 @@
 % ---
 % Tanto na capa quanto nas folhas de rosto apenas a primeira letra da primeira palavra (ou nomes próprios) devem estar em letra maiúscula, todas as demais devem ser em letra minúscula.
 \tituloPT{Verificação formal de contratos inteligentes na Ethereum}
-\tituloEN{Formal verification on Ethereum smart contracts}
+\tituloEN{Formal verification of Ethereum smart contracts}
 \autor[Dias, O. D.]{Gustavo Oliveira Dias}
 \genero{M} % Gênero do autor (M = Masculino / F = Feminino)
 \orientador[Orientador]{Prof. Dr.}{Adenilso da Silva Simão}
@@ -53,7 +53,7 @@
 % conter no máximo 500 palavras
 % conter no mínimo 1 e no máximo 5 palavras-chave
 \textoresumo[brazil]{
-    A tecnologia blockchain, promovida pela criptomoeda Bitcoin, ficou conhecida pela sua capacidade de realizar o gerenciamento de posse descentralizado de criptomoedas por meio de um livro-razão distribuído. Com a introdução da Ethereum, foi possível a implantação de contratos inteligentes, que são programas de computador que expressam cláusulas, condições e acordos estabelecidos entre as partes envolvidas. Uma vez implementados, os contratos inteligentes executam de forma autônoma e descentralizada por meio da Máquina Virtual Ethereum, sem a necessidade de intermediação. Por meios dos contratos inteligentes expandiu-se as áreas de aplicação da blockchain, que passou a abranger também aplicações descentralizadas, Organizações Autônomas Descentralizadas, governança, finanças, cuidados médicos, entre outras áreas. Solidity é a linguagem de programação desenvolvida para construção de contratos inteligentes para execução na Ethereum. Contudo, vulnerabilidades encontradas no código dos contratos ocasionaram diversas perdas financeiras. Devido à imutabilidade da blockchain, uma vez implantado, o contrato não pode ser alterado, o que aumentou a preocupação com o desenvolvimento de contratos livres de erros. Este trabalho tem como objetivo propor uma abordagem para verificação formal de contratos inteligentes. Para isso, as seguintes etapas devem ser concretizadas: (i) escolher quais vulnerabilidades serão atacadas; (ii) selecionar o tipo de abordagem relacionada à verificação formal que será utilizada; (iii) Realizar uma análise acerca da viabilidade da abordagem escolhida; (iv) definir as estratégias de implementação e experimentação para avaliação da proposta.
+    A tecnologia blockchain, promovida pela criptomoeda Bitcoin, ficou conhecida pela sua capacidade de realizar o gerenciamento de posse descentralizado de criptomoedas por meio de um livro-razão distribuído. Com a introdução da Ethereum, foi possível a implantação de contratos inteligentes, que são programas de computador que expressam cláusulas, condições e acordos estabelecidos entre as partes envolvidas. Uma vez implementados, os contratos inteligentes executam de forma autônoma e descentralizada por meio da Máquina Virtual Ethereum, sem a necessidade de intermediação. Por meio dos contratos inteligentes expandiram-se as áreas de aplicação da blockchain, que passaram a abranger também aplicações descentralizadas, Organizações Autônomas Descentralizadas, governança, finanças, cuidados médicos, entre outras áreas. Solidity é a linguagem de programação desenvolvida para construção de contratos inteligentes para execução na Ethereum. Contudo, vulnerabilidades encontradas no código dos contratos ocasionaram diversas perdas financeiras. Devido à imutabilidade da blockchain, uma vez implantado, o contrato não pode ser alterado, o que aumentou a preocupação com o desenvolvimento de contratos livres de erros. Este trabalho tem como objetivo propor uma abordagem para verificação formal de contratos inteligentes. Para isso, as seguintes etapas devem ser concretizadas: (i) escolher quais vulnerabilidades serão atacadas; (ii) selecionar o tipo de abordagem relacionada à verificação formal que será utilizada; (iii) Realizar uma análise acerca da viabilidade da abordagem escolhida; (iv) definir as estratégias de implementação e experimentação para avaliação da proposta.
     }{Blockchain, Livro-razão distribuído, Contrato inteligente, Verificação formal, Vulnerabilidades}
 
 
@@ -88,17 +88,21 @@
 \label{cap:fundamentacao}
 \input{tex/fundamentacao}
 
-\chapter{Revisão bibliográfica}
+\chapter{Metodologia e técnicas de pesquisa}
+\input{tex/revisao}
 \label{cap:revisao}
 
-\chapter{Trabalhos relacionados}
-\label{cap:trab_relacionados}
+%\chapter{Trabalhos relacionados}
+%\label{cap:trab_relacionados}
 
-\chapter{Método}
-\label{cap:metodo}
+%\chapter{Método}
+%\label{cap:metodo}
 
-\chapter{Considerações finais}
-\label{cap:cons_finais}
+\chapter{Cronograma de atividades}
+\label{cap:cronograma}
+
+%\chapter{Considerações finais}
+%\label{cap:cons_finais}
 
 %\chapter{Revisão bibliográfica}
 %\label{cap:revisao}
