Capítulo 2 completo e enviado para revisão

--- a/references.bib
+++ b/references.bib
@@ -931,10 +931,10 @@
   organization={IEEE}
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-
-
+%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%
 %Revisões sistemáticas sobre segurança e vulnerabilidades de SC
 %%%%%%%%%%%
@@ -1251,6 +1251,14 @@ url={https://docs.soliditylang.org/en/v0.7.4/index.html},
 note={Acesso em: 21 fev. 2021}
 }
 
+@misc{consensys2021bestpractices,
+  title={Ethereum Smart Contract Best Practices},
+  author={{ConsenSys Diligence}},
+  year={2021},
+  url={https://consensys.github.io/smart-contract-best-practices/},
+  note={Acesso em: 20 fev. 2021}
+}
+
 @misc{solidity-v5.9-documentation,
 author={},
 title={Solidity version 0.5.9 documentation},
@@ -1315,19 +1323,19 @@ note={Acesso em: 23 fev. 2021}
 @misc{usdcoin-site,
 title={USDC: the world's leading digital dollar stablecoin},
 url={https://www.circle.com/en/usdc},
-note={Acesso em: 23 fev 2021}
+note={Acesso em: 23 fev. 2021}
 }
 
 @misc{chainlink-site,
 title={Chainlink: Connect your smart contract to the outside world},
 url={https://chain.link/},
-note={Acesso em: 23 fev 2021}
+note={Acesso em: 23 fev. 2021}
 }
 
 @misc{aave-site,
 title={Aave: The liquidity protocol},
 url={https://aave.com/},
-note={Acesso em: 23 fev 2021}
+note={Acesso em: 23 fev. 2021}
 }
 
 @misc{paxgold-whitepaper,
@@ -1335,19 +1343,19 @@ author={Charles Cascarilla},
 title={Pax Gold white paper},
 year={2019},
 url={https://www.paxos.com/pax-gold-whitepaper},
-note={Acesso em: 23 fev 2021}
+note={Acesso em: 23 fev. 2021}
 }
 
 @misc{wibx-site,
 title={WiBX: Crypto jumping coin},
 url={https://www.wibx.io/},
-note={Acesso em: 23 fev 2021}
+note={Acesso em: 23 fev. 2021}
 }
 
 @misc{mco2-moss-whitepaper,
 title={MOSS: MCO2 token},
 url={v.fastcdn.co/u/f3b4407f/54475626-0-Moss-white-paper-eng.pdf},
-note={Acesso em: 23 fev 2021}
+note={Acesso em: 23 fev. 2021}
 }
 
 @ARTICLE{wang2019DAO-survey,
@@ -1718,4 +1726,67 @@ doi={10.1109/ACCESS.2018.2890507}
   booktitle={12th International Conference on Evaluation and Assessment in Software Engineering (EASE) 12},
   pages={1--10},
   year={2008}
+}
+
+@misc{knownattacks2018,
+ title={Comprehensive list of known attack vectors and common anti-patterns},
+ author={Adrian Manning},
+ year={2018},
+ url={https://github.com/sigp/solidity-security-blog},
+ note={Acesso em: 17 mai. 2021}
+}
+
+@misc{paritywallet2017attack,
+ title={The \$280M Ethereum’s Parity bug},
+ author={Matt Suiche},
+ year={2017},
+ url={https://blog.comae.io/the-280m-ethereums-bug-f28e5de43513},
+ note={Acesso em: 17 mai. 2021}
+}
+
+@inproceedings{destefanis2018smart-parity-wallet,
+  title={Smart contracts vulnerabilities: a call for blockchain software engineering?},
+  author={Destefanis, Giuseppe and Marchesi, Michele and Ortu, Marco and Tonelli, Roberto and Bracciali, Andrea and Hierons, Robert},
+  booktitle={2018 International Workshop on Blockchain Oriented Software Engineering (IWBOSE)},
+  pages={19--25},
+  year={2018},
+  organization={IEEE}
+}
+
+@article{zheng2006value-analysis,
+  title={On the value of static analysis for fault detection in software},
+  author={Zheng, Jiang and Williams, Laurie and Nagappan, Nachiappan and Snipes, Will and Hudepohl, John P and Vouk, Mladen A},
+  journal={IEEE transactions on software engineering},
+  volume={32},
+  number={4},
+  pages={240--253},
+  year={2006},
+  publisher={IEEE}
+}
+
+@incollection{peled2019formal-methods,
+  title={Formal methods},
+  author={Peled, Doron A},
+  booktitle={Handbook of Software Engineering},
+  pages={193--222},
+  year={2019},
+  publisher={Springer}
+}
+
+@article{ahrendt2016deductive-keybook,
+  title={Deductive software verification--the key book},
+  author={Ahrendt, Wolfgang and Beckert, Bernhard and Bubel, Richard and H{\"a}hnle, Reiner and Schmitt, Peter H and Ulbrich, Mattias},
+  journal={Lecture Notes in Computer Science},
+  volume={10001},
+  year={2016},
+  publisher={Springer}
+}
+
+@inproceedings{harrison2008theorem,
+  title={Theorem proving for verification (invited tutorial)},
+  author={Harrison, John},
+  booktitle={International Conference on Computer Aided Verification},
+  pages={11--18},
+  year={2008},
+  organization={Springer}
 }
