--- a/tex/pre-textual.tex
+++ b/tex/pre-textual.tex
@@ -10,7 +10,7 @@
 \incluilistadefiguras
 
 % Inclui a lista de tabelas
-%\incluilistadetabelas
+\incluilistadetabelas
 
 % Inclui a lista de quadros
 %\incluilistadequadros
