--- a/thesis.tex
+++ b/thesis.tex
@@ -69,7 +69,7 @@
 % ELEMENTOS PRÉ-TEXTUAIS
 % ----------------------------------------------------------
 
-%\input{tex/pre-textual}
+\input{tex/pre-textual}
 
 % ----
 % Início do documento
