--- a/tex/introducao.tex
+++ b/tex/introducao.tex
@@ -11,7 +11,7 @@ Blockchain é o nome dado à tecnologia subjacente utilizada em diversas platafo
 
 %Esses bens digitais são chamados de criptomoedas, ou tokens~\cite{angelo2020tokens}.
 
-A geração e gerenciamento de posse de criptomoedas é uma dentre diversas aplicações baseadas na DLT, ou seja, é apenas um fim para um meio~\cite{overview-blockchainbasic2018drescher}. Desde o seu surgimento, a blockchain tem passado por diversas transformações, o que possibilitou sua aplicação em diversas áreas do conhecimento, como finanças, governo, Internet das Coisas (do inglês, \sigla{IoT}{Internet of Things}), inteligência artificial, saúde, entre outras~\cite{swan2015blockchain-book, maesa2020blockchain3.0, zhu2019iot-applications, salah2019review-blockchain-ai, erikson2020survey-health}. 
+A geração e gerenciamento de posse de criptomoedas é uma dentre diversas aplicações baseadas na DLT, ou seja, é apenas um fim para um meio~\cite{overview-blockchainbasic2018drescher}. Desde o seu surgimento, a blockchain tem passado por diversas transformações, o que possibilitou sua aplicação em diversas áreas do conhecimento, como finanças, governo, Internet das Coisas (do inglês, \sigla{IoT}{Internet of Things}), \sigla{IA}{inteligência artificial}, saúde, entre outras~\cite{swan2015blockchain-book, maesa2020blockchain3.0, zhu2019iot-applications, salah2019review-blockchain-ai, erikson2020survey-health}. 
 
 Um fator crucial para impulsionar o avanço das DLTs foi a introdução dos ~\sigla{CI}{contratos inteligentes}~\cite{maesa2020blockchain3.0}. A plataforma baseada em DLT, Ethereum, proposta por~\citeonline{ethereum2014whitepaper}, possibilitou a execução de CIs de forma descentralizada em uma rede ponto-a-ponto (do inglês, \sigla{P2P}{\textit{peer-to-peer}}). Um contrato inteligente consiste em um conjunto de cláusulas e condições, que são definidas entre as partes envolvidas e expressas por meio de uma linguagem de programação~\cite{overview-smartcontracts2020zheng}. Depois de escrito, o contrato é implantado em uma blockchain e executado de forma autônoma, automática, e imutável~\cite{overview-smartcontracts2020zheng, kannengiesser2020trade-offs-acmcs}. 
 
